Change log for hexer, the multi-view binary editor

1.0.1	not yet
	- update the date in the manual page for the typographical
	  errors fixed in 1.0.0.

1.0.0	2016/10/12
	- drop support for ancient compilers that do not support
	  the "const" keyword or do not provide the alloca() function
	- fix the build on systems that do not need or have alloca.h and
	  rename the NEED_ALLOCA_H configuration setting to HAVE_ALLOCA_H
	- fix an overzealous double const
	- add a Makefile rule for the compilation of C files for
	  make(1) implementations that do not pass CPPFLAGS.
	- clarify a README comment about the unpacked subdirectory
	- drop the HAVE_NCURSES configuration setting, the support for
	  changing the foreground and background color is autodeteted
	- drop the bundled termlib implementation, require termcap support
	- drop the stubs for old-style termio support, the hexer code only
	  works with termios anyway
	- drop the config.* files and autogenerate config.h
	- fix the build of the myc command-line calculator
	- assume a POSIX environment and declare some of the configuration
	  settings as deprecated; no tests are done for them, and
	  the deactivated tests will be removed in a future Hexer release
	- correct some typographical and hyphenation errors

0.2.3	2015/12/10
	- build with large file support on Linux
	- clear the line after the cursor position on exit and suspend
	- fix some more typographical errors
	  (reported by Jakub Wilk <jwilk@debian.org>)

0.2.2	2015/12/10
	- reset the terminal color attributes on exit
	  (reported by Jakub Wilk <jwilk@debian.org>)
	- also reset the attributes on suspend (Ctrl-Z) and restore
	  them on resume

0.2.1	2015/12/10
	- fix some more typographical errors
	- abort on memory allocation failures (malloc(), realloc(),
	  strdup())

0.2.0	2015/12/09
	- fix a lot of C compiler warnings
	- provide a better vasprintf() simulation to fix a display bug
	- use sigemptyset() instead of a direct assignment to sigset_t