@@ -1,7 +1,7 @@
 .\" hexer.1	01/12/1996
 .\"
 .\" Copyright (c) 1995,1996 Sascha Demetrio
-.\" Copyright (c) 2009 - 2011, 2014, 2015 Peter Pentchev
+.\" Copyright (c) 2009 - 2011, 2014 - 2016 Peter Pentchev
 .\" All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
