@@ -3,6 +3,7 @@ Change log for hexer, the multi-view binary editor
 1.0.1	not yet
 	- update the date in the manual page for the typographical
 	  errors fixed in 1.0.0.
+	- add the year 2016 to the copyright notices of the changed files
 
 1.0.0	2016/10/12
 	- drop support for ancient compilers that do not support
